CI/CD Template for deploying Shopify Themes with Theme Kit
Changelog: changed

Add rspec for ThemeKit template

Add allow live flag

Update test structure

Make the branch naming flexible

Simplify expectation for staging only

Fix staging job `only` keyword

Using variables with the `only` keyword is only supported under the
`variables` keyword. In order to check that the pipeline is on the
default branch, we have to check that $CI_DEFAULT_BRANCH equals
$CI_COMMIT_BRANCH

Add a spec that the production job runs on tags

Remove aggregate failures

Add ThemeKit to exception list for AutDevops

Fix template specs

Fix rubocop error

Use long form environment

Add metric tracking

Add deploy prefix

Fix formatting after rebase

Add options for metrics collection

Add an empty line

Move options up

Remove duplicate entry

Remove extra whitespace

--- a/config/metrics/counts_28d/20210216184559_ci_templates_total_unique_counts_monthly.yml
+++ b/config/metrics/counts_28d/20210216184559_ci_templates_total_unique_counts_monthly.yml
@@ -169,6 +169,7 @@ options:
   - p_ci_templates_qualys_iac_security
   - p_ci_templates_liquibase
   - p_ci_templates_matlab
+  - p_ci_templates_themekit
 distribution:
 - ce
 - ee
