--- a/config/metrics/counts_7d/20210216184557_ci_templates_total_unique_counts_weekly.yml
+++ b/config/metrics/counts_7d/20210216184557_ci_templates_total_unique_counts_weekly.yml
@@ -169,6 +169,7 @@ options:
   - p_ci_templates_qualys_iac_security
   - p_ci_templates_liquibase
   - p_ci_templates_matlab
+  - p_ci_templates_themekit
 distribution:
 - ce
 - ee
