Add binaries folder and remove build flags in Go CI-Template
Add the binaries folder 'mybinaries' in the Go CI-Template to allow
multiple binaries generated by `go build` and remove the flags
`-race -ldflags "-extldflags '-static'"` in `go build`.

Changelog: changed

--- a/lib/gitlab/ci/templates/Go.gitlab-ci.yml
+++ b/lib/gitlab/ci/templates/Go.gitlab-ci.yml
@@ -35,7 +35,8 @@ format:
 compile:
   stage: build
   script:
-    - go build -race -ldflags "-extldflags '-static'" -o $CI_PROJECT_DIR/mybinary
+    - mkdir -p mybinaries
+    - go build -o mybinaries ./...
   artifacts:
     paths:
-      - mybinary
+      - mybinaries
