--- a/ee/config/metrics/counts_7d/20210216174958_i_analytics_dev_ops_score_weekly.yml
+++ b/ee/config/metrics/counts_7d/20210216174958_i_analytics_dev_ops_score_weekly.yml
@@ -1,7 +1,7 @@
 ---
 data_category: optional
 key_path: redis_hll_counters.analytics.i_analytics_dev_ops_score_weekly
-description: Unique visitors to /admin/dev_ops_report by week
+description: Unique visitors to /admin/dev_ops_reports by week
 product_section: dev
 product_stage: manage
 product_group: group::optimize
