--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,7 +2,7 @@ pre-push:
   parallel: true
   commands:
     danger:
-      run: CI_PROJECT_DIR=. bundle exec danger dry_run
+      run: bundle exec rake danger_local
     eslint:
       tags: frontend style
       files: git diff --name-only --diff-filter=d $(git merge-base origin/master HEAD)..HEAD
