ci: Default to run tests with multiple databases
By default, all tests run with multiple databases. We also run tests
with a single database in nightly scheduled pipelines.

If you want to force tests to run with a single database, you can add
the `pipeline:run-single-db` label to the merge request.

Signed-off-by: Rémy Coutable <remy@rymai.me>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,8 @@ variables:
   CHECK_PRECOMPILED_ASSETS: "true"
   FF_USE_FASTZIP: "true"
   SKIP_FLAKY_TESTS_AUTOMATICALLY: "true"
+  # Run with decomposed databases by default
+  DECOMPOSED_DB: "true"
 
   DOCS_REVIEW_APPS_DOMAIN: "178.62.207.141.nip.io"
   DOCS_GITLAB_REPO_SUFFIX: "ee"
