--- a/ee/app/workers/all_queues.yml
+++ b/ee/app/workers/all_queues.yml
@@ -39,6 +39,15 @@
   :weight: 1
   :idempotent:
   :tags: []
+- :name: cronjob:analytics_cycle_analytics_consistency
+  :worker_name: Analytics::CycleAnalytics::ConsistencyWorker
+  :feature_category: :value_stream_management
+  :has_external_dependencies:
+  :urgency: :low
+  :resource_boundary: :unknown
+  :weight: 1
+  :idempotent: true
+  :tags: []
 - :name: cronjob:analytics_cycle_analytics_incremental
   :worker_name: Analytics::CycleAnalytics::IncrementalWorker
   :feature_category: :value_stream_management
