--- a/qa/Rakefile
+++ b/qa/Rakefile
@@ -67,19 +67,18 @@ end
 
 namespace :test_resources do
   desc "Deletes resources created during E2E test runs"
-  task :delete, :file_pattern do |t, args|
-    args.with_defaults(file_pattern: QA::Runtime::Env.test_resources_created_filepath)
+  task :delete, [:file_pattern] do |t, args|
     QA::Tools::TestResourcesHandler.new(args[:file_pattern]).run_delete
   end
 
   desc "Upload test resources JSON files to GCS"
-  task :upload, [:file_pattern, :environment_name] do |t, args|
-    QA::Tools::TestResourcesHandler.new(args[:file_pattern]).upload(args[:environment_name])
+  task :upload, [:file_pattern, :ci_project_name] do |t, args|
+    QA::Tools::TestResourcesHandler.new(args[:file_pattern]).upload(args[:ci_project_name])
   end
 
   desc "Download test resources JSON files from GCS"
-  task :download, [:environment_name] do |t, args|
-    QA::Tools::TestResourcesHandler.new.download(args[:environment_name])
+  task :download, [:ci_project_name] do |t, args|
+    QA::Tools::TestResourcesHandler.new.download(args[:ci_project_name])
   end
 end
 # rubocop:enable Rails/RakeEnvironment
