Add Harbor integration
This adds the Harbor package registry as an optional project
integration.

When enabled, this integration adds the following environment variable
that CI jobs can use to download images from Harbor:

* `HARBOR_URL`
* `HARBOR_PROJECT_NAME`
* `HARBOR_USERNAME`
* `HARBOR_PASSWORD`

Part of https://gitlab.com/groups/gitlab-org/-/epics/7650

Changelog: added

--- a/spec/lib/gitlab/import_export/all_models.yml
+++ b/spec/lib/gitlab/import_export/all_models.yml
@@ -395,6 +395,7 @@ project:
 - mattermost_slash_commands_integration
 - shimo_integration
 - slack_slash_commands_integration
+- harbor_integration
 - irker_integration
 - packagist_integration
 - pivotaltracker_integration
