Do not run smoke and reliable e2e specs twice in review pipeline

--- a/.gitlab/ci/review-apps/qa.gitlab-ci.yml
+++ b/.gitlab/ci/review-apps/qa.gitlab-ci.yml
@@ -93,6 +93,7 @@ review-qa-all:
   variables:
     QA_RUN_TYPE: review-qa-all
     QA_SCENARIO: Test::Instance::All
+    QA_SKIP_SMOKE_RELIABLE: "true"
 
 review-performance:
   extends:
