--- a/config/feature_flags/development/incident_timeline.yml
+++ b/config/feature_flags/development/incident_timeline.yml
@@ -1,5 +1,5 @@
 ---
-name: incident_timeline_event_tab
+name: incident_timeline
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/80802
 rollout_issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/353426
 milestone: '14.9'
