Convert ci_builds-runner_id FK to LFK
Some runner_ids may be assigned to too many ci_builds so that deleting
them can cause downtime in the DB. So, we decided to convert this FK
to LFK.

Changelog: other

--- a/config/gitlab_loose_foreign_keys.yml
+++ b/config/gitlab_loose_foreign_keys.yml
@@ -11,6 +11,9 @@ ci_builds:
   - table: projects
     column: project_id
     on_delete: async_delete
+  - table: ci_runners
+    column: runner_id
+    on_delete: async_nullify
 ci_builds_metadata:
   - table: projects
     column: project_id
