Use --danger-id when running Danger
This will allow Danger to post separate comments when run in the
canonical context and in fork contexts. This is needed because the
Danger bot might not have the permission to edit a comment posted by
another bot.

Signed-off-by: Rémy Coutable <remy@rymai.me>

--- a/.gitlab/ci/review.gitlab-ci.yml
+++ b/.gitlab/ci/review.gitlab-ci.yml
@@ -55,7 +55,8 @@ danger-review:
       if [ -z "$DANGER_GITLAB_API_TOKEN" ]; then
         run_timed_command danger_as_local
       else
-        run_timed_command "bundle exec danger --fail-on-errors=true --verbose"
+        danger_id=$(echo -n ${DANGER_GITLAB_API_TOKEN} | md5sum | awk '{print $1}' | cut -c5-10)
+        run_timed_command "bundle exec danger --fail-on-errors=true --verbose --danger_id=${danger_id}"
       fi
 
 danger-review-local:
