--- a/config/feature_flags/development/convert_diff_to_utf8_with_replacement_symbol.yml
+++ b/config/feature_flags/development/convert_diff_to_utf8_with_replacement_symbol.yml
@@ -1,7 +1,7 @@
 ---
 name: convert_diff_to_utf8_with_replacement_symbol
-introduced_by_url:
-rollout_issue_url:
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/79996
+rollout_issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/354526
 milestone: '14.9'
 type: development
 group: group::code review
