--- a/package.json
+++ b/package.json
@@ -204,6 +204,7 @@
     "@gitlab/stylelint-config": "4.0.0",
     "@graphql-eslint/eslint-plugin": "3.0.0",
     "@testing-library/dom": "^7.16.2",
+    "@types/jest": "^26.0.24",
     "@vue/test-utils": "1.3.0",
     "acorn": "^6.3.0",
     "axios-mock-adapter": "^1.15.0",
