Set up initial GFM parser
Set up a Commonmark processing pipeline
using unified, remark, and rehype. This
pipeline allows providing a renderer
function that converts an AST into
a display format like HTML or a ProseMirror
document

--- a/package.json
+++ b/package.json
@@ -164,6 +164,9 @@
     "prosemirror-view": "^1.23.10",
     "raphael": "^2.2.7",
     "raw-loader": "^4.0.2",
+    "rehype-raw": "^6.1.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
     "scrollparent": "^2.0.1",
     "select2": "3.5.2-browserify",
     "smooshpack": "^0.0.62",
@@ -175,6 +178,7 @@
     "three-orbit-controls": "^82.1.0",
     "three-stl-loader": "^1.0.4",
     "timeago.js": "^4.0.2",
+    "unified": "^10.1.2",
     "url-loader": "^4.1.1",
     "uuid": "8.1.0",
     "visibilityjs": "^1.2.4",
