--- a/ee/config/feature_flags/development/geo_job_artifact_replication.yml
+++ b/ee/config/feature_flags/development/geo_job_artifact_replication.yml
@@ -1,8 +1,8 @@
 ---
 name: geo_job_artifact_replication
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/issues/327400
-rollout_issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/353995
+rollout_issue_url:
 milestone: '14.8'
 type: development
 group: group::geo
-default_enabled: true
+default_enabled: false
