--- a/data/deprecations/14-8-ci-build-variables.yml
+++ b/data/deprecations/14-8-ci-build-variables.yml
@@ -6,7 +6,22 @@
   breaking_change: true
   reporter: dhershkovitch
   body: |
-    The predefined CI/CD variables that start with `CI_BUILD_*` were deprecated in GitLab 9.0, and will be removed in GitLab 15.0. If you still use these variables, be sure to change to the current [`CI_JOB_*` predefined variables](https://docs.gitlab.com/ee/ci/variables/predefined_variables.html) which are identical (except for the updated name).
+    The predefined CI/CD variables that start with `CI_BUILD_*` were deprecated in GitLab 9.0, and will be removed in GitLab 15.0. If you still use these variables, be sure to change to the replacement [predefined variables](https://docs.gitlab.com/ee/ci/variables/predefined_variables.html) which are functionally identical:
+
+    | Removed variable      | Replacement variable    |
+    | --------------------- |------------------------ |
+    | `CI_BUILD_BEFORE_SHA` | `CI_COMMIT_BEFORE_SHA`  |
+    | `CI_BUILD_ID`         | `CI_JOB_ID`             |
+    | `CI_BUILD_MANUAL`     | `CI_JOB_MANUAL`         |
+    | `CI_BUILD_NAME`       | `CI_JOB_NAME`           |
+    | `CI_BUILD_REF`        | `CI_COMMIT_SHA`         |
+    | `CI_BUILD_REF_NAME`   | `CI_COMMIT_REF_NAME`    |
+    | `CI_BUILD_REF_SLUG`   | `CI_COMMIT_REF_SLUG`    |
+    | `CI_BUILD_REPO`       | `CI_REPOSITORY_URL`     |
+    | `CI_BUILD_STAGE`      | `CI_JOB_STAGE`          |
+    | `CI_BUILD_TAG`        | `CI_COMMIT_TAG`         |
+    | `CI_BUILD_TOKEN`      | `CI_JOB_TOKEN`          |
+    | `CI_BUILD_TRIGGERED`  | `CI_PIPELINE_TRIGGERED` |
 # The following items are not published on the docs page, but may be used in the future.
   stage: Verify
   tiers: [Free, Premium, Ultimate]
