Extend workers and services to support namespace for Security Policies
Changelog: added
EE: true

--- a/config/sidekiq_queues.yml
+++ b/config/sidekiq_queues.yml
@@ -415,6 +415,8 @@
   - 1
 - - security_findings_delete_by_job_id
   - 1
+- - security_orchestration_policy_rule_schedule_namespace
+  - 1
 - - security_scans
   - 2
 - - self_monitoring_project_create
