Expose import url and status in projects API
* add import_url field on project instance
* add import_status field on project instance

Changelog: added

--- a/spec/requests/api/project_attributes.yml
+++ b/spec/requests/api/project_attributes.yml
@@ -11,8 +11,6 @@ itself: # project
     - has_external_wiki
     - hidden
     - import_source
-    - import_type
-    - import_url
     - jobs_cache_index
     - last_repository_check_at
     - last_repository_check_failed
@@ -63,6 +61,8 @@ itself: # project
     - empty_repo
     - forks_count
     - http_url_to_repo
+    - import_status
+    - import_url
     - name_with_namespace
     - open_issues_count
     - owner
