Move the groups observability docs into dir
This documentation will be extended and there will be more dashboards
crosslinked. So a directory would be better suited.

--- a/doc/.vale/gitlab/Uppercase.yml
+++ b/doc/.vale/gitlab/Uppercase.yml
@@ -124,9 +124,9 @@ exceptions:
   - PEM
   - PEP
   - PGP
+  - PHP
   - PID
   - PKCS
-  - PHP
   - PNG
   - POSIX
   - POST
@@ -136,6 +136,7 @@ exceptions:
   - RBAC
   - RDP
   - RDS
+  - RDS
   - REST
   - RFC
   - RHEL
@@ -143,7 +144,6 @@ exceptions:
   - RPM
   - RPS
   - RSA
-  - RDS
   - RSS
   - RTC
   - RVM
@@ -161,6 +161,7 @@ exceptions:
   - SFTP
   - SHA
   - SLA
+  - SLI
   - SMS
   - SMTP
   - SOC
@@ -168,6 +169,7 @@ exceptions:
   - SPDX
   - SPF
   - SQL
+  - SRE
   - SSD
   - SSG
   - SSH
@@ -185,8 +187,8 @@ exceptions:
   - TOML
   - TOTP
   - TTL
-  - UID
   - UDP
+  - UID
   - UID
   - UNIX
   - URI
