--- a/ee/config/metrics/counts_7d/20210318183220_epics_usage_total_unique_counts_weekly.yml
+++ b/ee/config/metrics/counts_7d/20210318183220_epics_usage_total_unique_counts_weekly.yml
@@ -45,6 +45,7 @@ options:
     - g_project_management_epic_cross_referenced
     - g_project_management_users_epic_issue_added_from_epic
     - g_project_management_epic_related_added
+    - g_project_management_epic_related_removed
 distribution:
 - ee
 tier:
