Period limit default Insights yaml
Changelog: changed
EE: true

--- a/ee/fixtures/insights/default.yml
+++ b/ee/fixtures/insights/default.yml
@@ -7,12 +7,14 @@ issues:
         issuable_type: issue
         issuable_state: all
         group_by: month
+        period_limit: 3
     - title: Issues closed per month
       type: bar
       query:
         issuable_type: issue
         issuable_state: closed
         group_by: month
+        period_limit: 3
     - title: Bugs created per month by Priority
       type: stacked-bar
       query:
@@ -25,6 +27,7 @@ issues:
           - P::3
           - P::4
         group_by: month
+        period_limit: 3
     - title: Bugs created per month by Severity
       type: stacked-bar
       query:
@@ -37,6 +40,7 @@ issues:
           - S::3
           - S::4
         group_by: month
+        period_limit: 3
 mergeRequests:
   title: Merge requests dashboard
   charts:
@@ -46,9 +50,11 @@ mergeRequests:
         issuable_type: merge_request
         issuable_state: merged
         group_by: week
+        period_limit: 12
     - title: Merge requests merged per month
       type: bar
       query:
         issuable_type: merge_request
         issuable_state: merged
         group_by: month
+        period_limit: 3
