gitlab/setup_helper: Migrate Gitaly to use runtime directory
Among other tasks, the setup helper also generates the Gitaly config.
Part of the things we configure is the internal socket directory, which
is currently being phased out by Gitaly. Instead, Gitaly provides a new
runtime directory which is intended to host all files and directories
created by Gitaly at runtime, including internal sockets.

Convert the setup helper to use the new runtime directory.

Changelog: changed

--- a/.gitlab/ci/global.gitlab-ci.yml
+++ b/.gitlab/ci/global.gitlab-ci.yml
@@ -49,8 +49,8 @@
     - tmp/tests/gitaly/config.toml
     - tmp/tests/gitaly/gitaly2.config.toml
     - tmp/tests/gitaly/internal/
-    - tmp/tests/gitaly/internal_gitaly2/
-    - tmp/tests/gitaly/internal_sockets/
+    - tmp/tests/gitaly/run/
+    - tmp/tests/gitaly/run2/
     - tmp/tests/gitaly/Makefile
     - tmp/tests/gitaly/praefect.config.toml
     - tmp/tests/gitaly/ruby/
