Adjust ProjectExportWorker urgency
ProjectExportWorker jobs are sometimes not
scheduled for >1 hour which is out of step
with customer expectations.

Changes the urgency of the worker to :low.

Changelog: changed

--- a/app/workers/all_queues.yml
+++ b/app/workers/all_queues.yml
@@ -2771,7 +2771,7 @@
   :worker_name: ProjectExportWorker
   :feature_category: :importers
   :has_external_dependencies:
-  :urgency: :throttled
+  :urgency: :low
   :resource_boundary: :memory
   :weight: 1
   :idempotent:
