--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "webpack-prod": "NODE_OPTIONS=\"--max-old-space-size=3584\" NODE_ENV=production webpack --config config/webpack.config.js"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.11",
+    "@apollo/client": "^3.5.10",
     "@babel/core": "^7.10.1",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-json-strings": "^7.10.1",
@@ -95,7 +95,7 @@
     "@tiptap/vue-2": "^2.0.0-beta.77",
     "@toast-ui/editor": "^2.5.2",
     "@toast-ui/vue-editor": "^2.5.2",
-    "apollo-upload-client": "^14.1.3",
+    "apollo-upload-client": "15.0.0",
     "autosize": "^5.0.1",
     "aws-sdk": "^2.637.0",
     "axios": "^0.24.0",
@@ -259,7 +259,6 @@
     "bootstrap-vue": "https://docs.gitlab.com/ee/development/fe_guide/dependencies.html#bootstrapvue"
   },
   "resolutions": {
-    "@apollo/client/subscriptions-transport-ws": "0.11.0",
     "chokidar": "^3.5.3",
     "@types/node": "14.17.5"
   },
