Gitaly might produce different binary based on config

--- a/.gitlab/ci/global.gitlab-ci.yml
+++ b/.gitlab/ci/global.gitlab-ci.yml
@@ -41,6 +41,7 @@
   key:
     files:
       - GITALY_SERVER_VERSION
+      - lib/gitlab/setup_helper.rb
     prefix: "gitaly-binaries-${DEBIAN-VERSION}"
   paths:
     - tmp/tests/gitaly/_build/bin/
