Add tests to the CI schema
- These are tests taken from schemastore at commit
`6b7856dc5e8ed774cbbf3952847b17c90df6396f`
- Removed `missing_dependency_failure` from `retry:when` tests since they
are not recognized as valid keywords in the schema.
- Add toValidateJsonSchema matcher

--- a/package.json
+++ b/package.json
@@ -206,6 +206,8 @@
     "@types/jest": "^26.0.24",
     "@vue/test-utils": "1.3.0",
     "acorn": "^6.3.0",
+    "ajv": "^8.10.0",
+    "ajv-formats": "^2.1.1",
     "axios-mock-adapter": "^1.15.0",
     "babel-jest": "^26.5.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
